#AB18 - car => rent-a-car

--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Hertz Rental Car</h1>
+          <h1 data-aos="fade-up">{{message.serviceName}}</h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Automobile za sve potrebe i želje možete naći kod nas</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a fragment="about" (click)="navigateTo('cars')" class="btn-get-started scrollto">Naša vozila</a>
