--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -12,7 +12,7 @@
                 <div class="pricing-bottom"> 
                 <div class="img1" ></div>
                 <div class="agileits-buy">
-                  <a class="popup-with-zoom-anim" routerLink="/car/rent-a-car">More</a>
+                  <a class="popup-with-zoom-anim" (click)="onSelect(service)">More</a>
                 </div>
                 </div>
               </div> 
