#AB18 - car => rent-a-car

--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -10,7 +10,9 @@
                   <p>{{service.location}}</p>
                 </div>
                 <div class="pricing-bottom"> 
-                <div class="img1" ></div>
+                <div class="img1">
+                  <img style="width: 100%;" src={{service.img}}/>
+                </div>
                 <div class="agileits-buy">
                   <a class="popup-with-zoom-anim" (click)="onSelect(service)">More</a>
                 </div>
