--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -17,13 +17,13 @@
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">{{rentService.serviceName}}</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Automobile za sve potrebe i želje možete naći kod nas</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">{{rentService.description}}</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a fragment="about" (click)="navigateTo('cars')" class="btn-get-started scrollto">Naša vozila</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
-          <img src="https://velikirecnik.com/wp-content/uploads/2019/04/rent-a-car.jpg" class="img-fluid animated" alt="">
+          <img src={{rentService.img}} class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
@@ -183,7 +183,7 @@
 
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
         <div class="contact-about">
-          <h3>Hertz Car Rental</h3>
+          <h3>{{rentService.serviceName}}</h3>
           <p>Za sve nedoumice koje imate možete nas pozvati, kontaktirati putem maila ili nas posetiti na jednoj od mnogobrojnih lokacija. </p>
           <div class="social-links">
             <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
