#AB19 - Modal Window
not work

--- a/clover/src/app/components/car/car-filter/car-filter.component.html
+++ b/clover/src/app/components/car/car-filter/car-filter.component.html
@@ -9,6 +9,6 @@
         
         
         <div class="btn">
-        <button class="myButton">Rent {{car.pricePerDay}}$</button>
+        <button class="myButton" (click)="onCreate()">Rent {{car.pricePerDay}}$</button>
       </div>
       </div>
