#AB16 - Car Admin

--- a/clover/src/app/components/car/car-filter/car-filter.component.html
+++ b/clover/src/app/components/car/car-filter/car-filter.component.html
@@ -10,5 +10,6 @@
         
         <div class="btn">
         <button class="myButton" (click)="onCreate()">Rent {{car.pricePerDay}}$</button>
+        <button class="myButton" [hidden]="check()">Change</button>
       </div>
       </div>
