--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="agileits-buy">
                   <a class="popup-with-zoom-anim" (click)="onSelect(service)">More</a>
-                  <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-left: 10%;" (click)="onSelect(service)">Change</a>
+                  <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-left: 10%;" (click)="onSelectRentService(service)">Change</a>
                 </div>
                 </div>
               </div> 
