--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -922,3 +922,14 @@ top:85px;
   margin-top: 0%;
   margin-left: 90%;
 }
+
+
+agm-map{
+  height: 800px;
+  width: 90%;
+}
+
+.locations{
+  margin-left: 10%;
+  margin-top: 40%;
+}
