--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -1,51 +1,40 @@
 
   <section class="signup">
-              <form [formGroup]="singUpForm" (ngSubmit)="onSubmit()" method="POST" id="signup-form" class="signup-form">
+              <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
+
+                <input type="hidden" name="userId" [value]="service.formData.userId">
+
                 <div>
                   <button class="btn" (click)="navigateTo('sing-in')" (click)="sendMessage()"><span>Sing in</span></button>
                   <button class="btn"><span>Register</span></button>
                 </div>
 
                   <div class="form-group">
-                      <input type="text" id="FirstName" class="form-input" formControlName="FirstName" placeholder="Your Name"/>
-                      <div *ngIf="singUpForm.controls.FirstName.invalid">
-                        <!--Please enter First name-->
-                    </div>
+                      <input #name="ngModel" [(ngModel)]="service.formData.name" name="name" type="text" id="Name" class="form-input" placeholder="Your Name" required/>
                   </div>
 
                   <div class="form-group">
-                    <input type="mail" id="Email" class="form-input" formControlName="Email" placeholder="Mail"/>
-                    <div *ngIf="singUpForm.controls.Email.invalid">
-                      <!--Please enter Email-->
-                  </div>
+                    <input type="mail" #email="ngModel" [(ngModel)]="service.formData.email" name="email" id="Email" class="form-input" placeholder="Mail" required/>
                   </div>
 
                   <div class="form-group">
-                    <input type="password" id="Password" class="form-input" formControlName="Password" placeholder="Password"/>
-                    <div *ngIf="singUpForm.controls.Password.invalid">
-                      <!--Please enter Password-->
-                  </div>
+                    <input type="password" #password="ngModel" [(ngModel)]="service.formData.password" name="password" id="Password" class="form-input" placeholder="Password" required/>
                   </div>
 
                   <div class="form-group">
-                    <input type="password" id="Password" class="form-input" formControlName="Password" placeholder="Repeat your password"/>
-                    <div *ngIf="singUpForm.controls.Password.invalid">
-                      <!--Please enter Password-->
-                  </div>
+                    <input type="password" id="Password" class="form-input" placeholder="Repeat your password" required/>
                   </div>
 
                   <div class="form-group">
-                    <input type="text" id="City" class="form-input" formControlName="City" placeholder="City"/>
-                    <div *ngIf="singUpForm.controls.City.invalid">
-                      <!--Please enter City-->
-                  </div>
+                    <input type="text" #city="ngModel" [(ngModel)]="service.formData.city" name="city" id="City" class="form-input" placeholder="City" required/>
                   </div>
 
                   <div class="form-group">
-                    <input type="string" id="PhoneNumber" class="form-input" formControlName="PhoneNumber" placeholder="Phone number"/>
-                    <div *ngIf="singUpForm.controls.PhoneNumber.invalid">
-                      <!--Please enter PhoneNumber-->
+                    <input type="string" #phoneNumber="ngModel" [(ngModel)]="service.formData.phoneNumber" name="phoneNumber" id="PhoneNumber" class="form-input" placeholder="Phone number" required/>
                   </div>
+
+                  <div class="form-group">
+                    <input type="string" #userType="ngModel" [(ngModel)]="service.formData.userType" name="userType" id="UserType" class="form-input" placeholder="User Type" required/>
                   </div>
 
                   <div class="form-group">
