--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -11,7 +11,7 @@
                         </div>
                         <div class="profile-usertitle">
                             <div class="profile-usertitle-name">
-                                David Ćeranić
+                                {{service.list[1].name}}
                             </div>
 
                             <div class="profile-usertitle-job">
