--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -4,6 +4,7 @@
     <div class="bg">
         <div class="container" style="margin-top: 30px;">
             <div class="row profile">
+
                 <div class="col-md-3">
                     <div class="profile-sidebar">
                         <div class="profile-userpic">
@@ -11,7 +12,7 @@
                         </div>
                         <div class="profile-usertitle">
                             <div class="profile-usertitle-name">
-                                {{service.list[1].name}}
+                                {{user.name}}
                             </div>
 
                             <div class="profile-usertitle-job">
