--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -22,23 +22,17 @@
                     <button class="btn" (click)="showRegister()"><span>Register</span></button>
                   </div>
 
-                <form [formGroup]="singInForm" (ngSubmit)="onSubmit()" method="POST" id="signup-form" class="signup-form">
+                <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
                   <div class="form-group">
-                      <input type="mail" id="Email" class="form-input" formControlName="Email" placeholder="Mail"/>
-                      <div *ngIf="singInForm.controls.Email.invalid">
-                        <!--Please enter Email-->
-                    </div>
+                      <input type="mail" nmae="email" id="Email" class="form-input" placeholder="Mail" required/>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" id="Password" class="form-input" formControlName="Password" placeholder="Password"/>
-                        <div *ngIf="singInForm.controls.Password.invalid">
-                          <!--Please enter Password-->
-                      </div>
+                        <input type="password" name="password" id="Password" class="form-input" placeholder="Password" required/>
                       </div>
   
                     <div class="form-group">
-                        <input type="submit" routerLink="/register-user" (click)=becomeAUser() name="submit" id="submit" class="form-submit" value="Sign in"/>
+                        <input type="submit" (click)=becomeAUser() name="submit" id="submit" class="form-submit" value="Sign in"/>
                     </div>
 
                     <div class="d-flex justify-content-around">
