--- a/clover/src/app/components/car/car-filter/car-filter.component.html
+++ b/clover/src/app/components/car/car-filter/car-filter.component.html
@@ -1,6 +1,6 @@
 
     <div *ngFor="let car of filtredCars" class="div1">
-        <div class="image" style="content:url({{car.imageUrl}})"></div>
+        <div class="image" style="content:url({{car.imgUrl}})"></div>
         <div class="divName">{{car.serviceName}}</div>
         <div class="div5To">Brand: {{car.brand}}  Year:{{car.year}}</div>
         <div class="div6To">Model: {{car.model}} Seats:{{car.numOfSeats}}</div>
