--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -63,6 +63,13 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
           <p>{{rentService.about}}</p>
         </div>
+
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
+          <div style="margin-top: -8%;" class="section-title" data-aos="fade-up">
+            <h2>Cenovnik</h2>
+          </div>
+          <img src={{rentService.priceTable}} class="img-fluid animated" alt="">
+        </div>
       </div>
 
     </div>
