Dodavanje i ispisivanje iz tabele

--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -97,7 +97,7 @@
 				
 
 				<div class="conteiner2" id="style-2">
-
+					<button  type="button" routerLink="/add-about-company" >addcomp</button>
 						<div class="wrapper" *ngFor="let company of allAvioCompanies" >
 							<p class="resp-tabs-list">  </p>
 							<div class="cols">
