--- a/clover/src/app/components/company-profile/company-profile.component.html
+++ b/clover/src/app/components/company-profile/company-profile.component.html
@@ -3,9 +3,10 @@
                 <div class="conteinter4">
                 <div class="image2"></div>
                 <div class="about"><p style="color:whitesmoke">aaaaassssss{{abtCompany.avioCompDestinations}}sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</p></div>
-        
+                
                     
-                </div> 
+                </div>
+                <div><button  type="button" routerLink="/add-flight" >add-flight</button></div> 
                 <div class="booking-form">
                                 <form>
                                         <div class="form-group">
@@ -125,31 +126,54 @@
 
 
             <div class="conteiner8">
+                        <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" >
+
+                         <input type="hidden" name="flightID" [value]="service.formData.flightID">
                         <div class="form-group">
-                                <span class="form-label" style="color:white;" >Flying from</span>
-                                <input class="form-control" type="text" placeholder="City or airport">
+                               From:
+                                <input name="from"   #from="ngModel" [(ngModel)]="service.formData.from"  type="text"  class="form-control" placeholder="City or airport" id="from" required>
                         </div>
                         <div class="form-group">
-                              <span class="form-label" style="color:white;">Flyning to</span>
-                              <input class="form-control" type="text" placeholder="City or airport">
+                              To:
+                              <input name="to" class="form-control" #to="ngModel" [(ngModel)]="service.formData.to"  type="text" placeholder="City or airport"  id="to" required>
                         </div>
                          <div class="form-group">
-                            <span class="form-label" style="color:white;">Departing</span>
-                           <input class="form-control" type="date" required>
+                                Departing:
+                           <input name="departing" class="form-control"  #departing="ngModel" [(ngModel)]="service.formData.departing"  id="departing" type="date" required>
                           </div>
                           <div class="form-group">
-                                        <span class="form-label" style="color:white;">Returning</span>
-                                        <input class="form-control" type="date" required>
+                                Returning:
+                                        <input  name="returning" #returning="ngModel" [(ngModel)]="service.formData.returning" id="returning" class="form-control" type="date" required>
                          </div>
                          <div class="form-group">
-                                        <span class="form-label" style="color:white;">Price</span>
-                                        <input class="form-control" type="text" placeholder="Price">
+                                Classf:
+                                        <input name="classf" #classf="ngModel" [(ngModel)]="service.formData.classf"  id="classf" class="form-control" type="text" placeholder="Price" required>
                         </div>
                         <div class="form-group">
-                                        <span class="form-label" style="color:white;">Stops</span>
-                                        <input class="form-control" type="text" placeholder="Stops">
+                                Baggage:
+                                        <input name="baggage" #baggage="ngModel" [(ngModel)]="service.formData.baggage"   id="baggage" class="form-control" type="text" placeholder="baggage" required>
                         </div>   
 
-                         <button  class="myButton2">ADD NEW FLIGHT</button>
+                        <div class="form-group">
+                                Stops:
+                                        <input name="stops" #stops="ngModel" [(ngModel)]="service.formData.stops"  id="stops" class="form-control" type="number" placeholder="stops" required>
+                        </div>   
+                          <div class="form-group">
+                                Duration:
+                                        <input name="duration"  #duration="ngModel" [(ngModel)]="service.formData.duration" id="duration" class="form-control" type="text" placeholder="duration" required>
+                        </div> 
+                            <div class="form-group">
+                                        Company Name:
+                                        <input name="companyName" #companyName="ngModel" [(ngModel)]="service.formData.companyName"  id="companyName" class="form-control" type="text" placeholder="companyName" required>
+                        </div>   
+                        <div class="form-group">
+                                        Price:
+                                        <input name="price" #price="ngModel" [(ngModel)]="service.formData.price"  id="price" class="form-control" type="number" placeholder="price" required>
+                        </div>   
+
+                        <div class="form-group">
+                         <input  type="submit" name="submit" id="submit" class="form-submit" value="Add Flight"/>
+                        </div>
+                        </form>>
             </div>
         </body>
