#AB22 - Voting Initional

--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -37,6 +37,11 @@
                                 </li>
                                 <li>
                                     <a routerLink="/register-user">
+                                    <i class="glyphicon glyphicon-time"></i>
+                                    History </a>
+                                </li>
+                                <li>
+                                    <a routerLink="/register-user">
                                     <i class="glyphicon glyphicon-list-alt"></i>
                                     Your invites </a>
                                 </li>
