--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -8,6 +8,7 @@
                 <div class="pricing-top top-two">
                   <h3>{{rentService.serviceName}}</h3>
                   <p>{{rentService.location}}</p>
+                  <div class="rate"> <ngb-rating [rate]="3"></ngb-rating> </div> 
                 </div>
                 <div class="pricing-bottom"> 
                 <div class="img1">
