--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -43,7 +43,7 @@
                 <div class="input-field fifth-wrap">
                   <p style="color:lavenderblush; margin-left: 35%;"> Admin Services</p>
                   <div class="input-field fifth-wrap">
-                    <button class="btn-search" type="button" routerLink="/car/add-rent-a-car">Add Service</button>
+                    <button class="btn-search" type="button" (click)="onAddService()">Add Service</button>
                   </div>
                 </div>
               </div>
