--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.html
@@ -159,7 +159,7 @@
       <form style="margin-top: 17%;">
             <p style="color:white;"> Admin Services</p>
               <div class="form-btn">
-                <button class="submit-btn" type="button" routerLink="/car/add-car">Add Car</button>
+                <button class="submit-btn" type="button" (click)="onAddCar()">Add Car</button>
               </div>
       </form>
     </div>
