--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="form-group">
-      <input type="submit" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
+      <input type="submit" name="submit" id="submit" class="form-submit" value="Add Car"/>
   </div>
 
 </form>
