--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -1,3 +1,15 @@
-<div mat-dialog-content class="mat-dialog-content">
-    <p>rent-car works!</p>
-</div>
+ <form ><!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
+
+    <!-- <input type="hidden" name="carId" [value]="service.formData.carId"> -->
+  
+    <div class="form-group">
+        Enter Number of Days: 
+        <!--<input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" required/> -->
+        <input name="NumofDays" type="number" class="form-input" id="NumofDays" placeholder="1" required/>
+    </div>
+
+    <div class="form-group">
+        Total Price: {{car.pricePerDay}} 
+    </div>
+
+</form>  
