#AB19 - Modal window

--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -62,4 +62,6 @@
       <input type="submit" name="submit" id="submit" class="form-submit" value="Add Car"/>
   </div>
 
+  <button mat-dialog-close> Close</button>
+  
 </form>
