--- a/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
+++ b/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
@@ -52,4 +52,6 @@
         <input type="submit" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
     </div>
 
+    <button mat-dialog-close> Close</button>
+
   </form>
