--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.css
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.css
@@ -1,3 +1,12 @@
 .mat-dialog-content {
     padding: 0;
   }
+
+  div.image {
+    position: absolute;
+    width: 200px;
+    height: 140px;
+    left: 800px;
+    top: 230px;
+   
+  }
