--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -1,15 +1,33 @@
+ <h1 mat-dialog-title> {{car.brand}} {{car.model}}</h1>
+ <div class="image" style="content:url({{car.imgUrl}})"></div>
+ 
  <form ><!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
 
     <!-- <input type="hidden" name="carId" [value]="service.formData.carId"> -->
-  
-    <div class="form-group">
-        Enter Number of Days: 
-        <!--<input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" required/> -->
-        <input name="NumofDays" type="number" class="form-input" id="NumofDays" placeholder="1" required/>
+    <div class="row">
+        <div class="col-md-3">
+            <div class="form-group">
+            <span class="form-label">Start Date</span>
+            <input style="width: 175px;" class="form-control" type="date" required>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="form-group">
+            <span class="form-label">End Date</span>
+            <input style="width: 175px; margin-left: 40px;" class="form-control" type="date" required>
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
         Total Price: {{car.pricePerDay}} 
     </div>
+
+    <div class="form-group">
+        <input type="submit" name="submit" id="submit" class="form-submit" value="Rent"/>
+    </div>
+
+    <button mat-dialog-close> Close</button>
 
 </form>  
