--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -22,13 +22,13 @@
                     <button class="btn" (click)="showRegister()"><span>Register</span></button>
                   </div>
 
-                <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
+                <form [formGroup]="loginGroup"  autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form">
                   <div class="form-group">
-                      <input type="mail" nmae="email" id="Email" class="form-input" placeholder="Mail" required/>
+                      <input type="mail" name="email" formControlName="email" id="Email" class="form-input" placeholder="Mail" required/>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" name="password" id="Password" class="form-input" placeholder="Password" required/>
+                        <input type="password" name="password" formControlName="password" id="Password" class="form-input" placeholder="Password" required/>
                       </div>
   
                     <div class="form-group">
