--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -9,31 +9,37 @@
                   <button class="btn"><span>Register</span></button>
                 </div>
 
+                <div style="margin-left: 16px;" class="row">
                   <div class="form-group">
-                      <input #name="ngModel" [(ngModel)]="service.formData.name" name="name" type="text" id="Name" class="form-input" placeholder="Your Name" required/>
+                      <input #name="ngModel" [(ngModel)]="service.formData.name" name="name" type="text" id="Name" class="form-input" placeholder="Name" required/>
                   </div>
 
-                  <div class="form-group">
+                  <div style="margin-left: 10px;" class="form-group">
                     <input type="mail" #email="ngModel" [(ngModel)]="service.formData.email" name="email" id="Email" class="form-input" placeholder="Mail" required/>
                   </div>
+                </div>
 
+                <div style="margin-left: 16px;" class="row">
                   <div class="form-group">
                     <input type="password" #password="ngModel" [(ngModel)]="service.formData.password" name="password" id="Password" class="form-input" placeholder="Password" required/>
                   </div>
 
-                  <div class="form-group">
+                  <div style="margin-left: 10px;" class="form-group">
                     <input type="password" id="Password" class="form-input" placeholder="Repeat your password" required/>
                   </div>
+                </div>
 
+                <div style="margin-left: 16px;" class="row">
                   <div class="form-group">
                     <input type="text" #city="ngModel" [(ngModel)]="service.formData.city" name="city" id="City" class="form-input" placeholder="City" required/>
                   </div>
 
-                  <div class="form-group">
+                  <div style="margin-left: 10px;" class="form-group">
                     <input type="string" #phoneNumber="ngModel" [(ngModel)]="service.formData.phoneNumber" name="phoneNumber" id="PhoneNumber" class="form-input" placeholder="Phone number" required/>
                   </div>
+                </div>
 
-                  <div class="form-group">
+                  <div style="margin-left: 16px; width: 420px;" class="form-group">
                     <input type="string" #userType="ngModel" [(ngModel)]="service.formData.userType" name="userType" id="UserType" class="form-input" placeholder="User Type" required/>
                   </div>
 
