--- a/clover/src/styles.css
+++ b/clover/src/styles.css
@@ -1,2 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+#toast-container > div {
+    opacity:1;
+}
+.toast {
+    font-size: initial !important;
+    border: initial !important;
+    backdrop-filter: blur(0) !important;
+    width: 100px;
+    height: 50px;
+  }
+  .toast-success {
+    background-color: #53b453 !important;
+    width: 180px;
+    height: 40px;
+    position: absolute;
+    margin-top: -650px;
+    margin-left: 1200px;
+  }
+  .toast-error {
+    background-color: #BD362F !important;
+    width: 180px;
+    height: 40px;
+    position: absolute;
+    margin-top: -650px;
+    margin-left: 1200px;
+  }
+  .toast-info {
+    background-color: #2F96B4 !important;
+    width: 180px;
+    height: 40px;
+    position: absolute;
+    margin-top: -650px;
+    margin-left: 1200px;
+  }
+  .toast-warning {
+    background-color: #F89406 !important;
+    width: 180px;
+    height: 40px;
+    position: absolute;
+    margin-top: -650px;
+    margin-left: 1200px;
+  }
