--- a/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
+++ b/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
@@ -2,51 +2,53 @@
 
     <input type="hidden" name="serviceId" [value]="service.formData.serviceId">
 
+     <div *ngIf="rentService !== null">
       <div class="form-group">
         Rent Service Name: 
-        <input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" required/>
+        <input #serviceName="ngModel" [(ngModel)]="service.formData.serviceName" name="serviceName" type="text" class="form-input" id="serviceName" placeholder="{{rentService.serviceName}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Locarion:
-        <input #location="ngModel" [(ngModel)]="service.formData.location" name="location" type="text" class="form-input" id="location" required/>
+        <input #location="ngModel" [(ngModel)]="service.formData.location" name="location" type="text" class="form-input" id="location" placeholder="{{rentService.location}}" required/>
       </div>
 
       <div class="form-group">
         <!-- <button class="btn-search" type="button">Add Image</button> -->
         Rent Service Img:
-        <input #img="ngModel" [(ngModel)]="service.formData.img" name="img" type="text" class="form-input" id="about" required/>
+        <input #img="ngModel" [(ngModel)]="service.formData.img" name="img" type="text" class="form-input" id="about" placeholder="{{rentService.img}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Description:
-        <input #description="ngModel" [(ngModel)]="service.formData.description" name="description"  type="text" class="form-input" id="about" required/>
+        <input #description="ngModel" [(ngModel)]="service.formData.description" name="description"  type="text" class="form-input" id="about" placeholder="{{rentService.description}}" required/>
       </div>
 
       <div class="form-group">
         About Rent Service:
-        <input #about="ngModel" [(ngModel)]="service.formData.about" name="about" type="text" class="form-input" id="about" required/>
+        <input #about="ngModel" [(ngModel)]="service.formData.about" name="about" type="text" class="form-input" id="about" placeholder="{{rentService.about}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Price Table:
-        <input #priceTable="ngModel" [(ngModel)]="service.formData.priceTable" name="priceTable" type="text" class="form-input" id="priceTable" required/>
+        <input #priceTable="ngModel" [(ngModel)]="service.formData.priceTable" name="priceTable" type="text" class="form-input" id="priceTable" placeholder="{{rentService.priceTable}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Contact:
-        <input #contact="ngModel" [(ngModel)]="service.formData.contact" name="contact" type="text" class="form-input" id="contact" required/>
+        <input #contact="ngModel" [(ngModel)]="service.formData.contact" name="contact" type="text" class="form-input" id="contact" placeholder="{{rentService.contact}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Latitude:
-        <input #lat="ngModel" [(ngModel)]="service.formData.lat" name="lat" type="number" class="form-input" id="contact" required/>
+        <input #lat="ngModel" [(ngModel)]="service.formData.lat" name="lat" type="number" class="form-input" id="contact" placeholder="{{rentService.lat}}" required/>
       </div>
 
       <div class="form-group">
         Rent Service Longitude:
-        <input #lng="ngModel" [(ngModel)]="service.formData.lng" name="lng" type="number" class="form-input" id="contact" required/>
+        <input #lng="ngModel" [(ngModel)]="service.formData.lng" name="lng" type="number" class="form-input" id="contact" placeholder="{{rentService.lng}}" required/>
       </div>
+    </div>
 
       <div class="form-group">
         <input type="submit" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
