--- a/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
+++ b/clover/src/app/components/car/rent-a-car-filter/rent-a-car-filter.component.html
@@ -17,6 +17,7 @@
                 <div class="agileits-buy">
                   <a class="popup-with-zoom-anim" (click)="onSelect(rentService)">More</a>
                   <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-left: 10%;" (click)="onSelectRentService(rentService)">Change</a>
+                  <a class="popup-with-zoom-anim" [hidden]="check()" style="margin-left: 30%;" (click)="onDelete(rentService.serviceId)">Delete</a>
                 </div>
                 </div>
               </div> 
