--- a/clover/src/app/components/car/car-filter/car-filter.component.html
+++ b/clover/src/app/components/car/car-filter/car-filter.component.html
@@ -11,6 +11,6 @@
         <div class="btn">
         <button class="myButton" (click)="onRent(car)">Rent {{car.pricePerDay}}$</button>
         <button class="myButton" [hidden]="check()" (click)="onSelectCar(car)">Change</button>
-        <button class="myButton" [hidden]="check()" (click)="onSelectCar(car)">Delete</button>
+        <button class="myButton" [hidden]="check()" (click)="onDelete(car.carId)">Delete</button>
       </div>
       </div>
