--- a/clover/src/styles.css
+++ b/clover/src/styles.css
@@ -43,3 +43,15 @@
     margin-top: -650px;
     margin-left: 1200px;
   }
+
+  input.ng-dirty.ng-invalid{
+    border-color: rgb(235, 35, 0);
+  }
+
+  div.validation-error{
+    width: 100%;
+    margin-top: .25rem;
+    margin-left: 32%;
+    font-size: 80%;
+    color: rgb(235, 35, 0);
+  }
