--- a/clover/src/app/components/car/add-car/add-car.component.html
+++ b/clover/src/app/components/car/add-car/add-car.component.html
@@ -73,7 +73,7 @@
    </div>
 
     <div class="form-group">
-      <input type="submit" name="submit" id="submit" class="form-submit" value="Add Car"/>
+      <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Car"/>
   </div>
 
   <button mat-dialog-close> Close</button>
