--- a/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
+++ b/clover/src/app/components/car/add-rent-a-car/add-rent-a-car.component.html
@@ -60,7 +60,7 @@
     <!-- </div> -->
 
       <div class="form-group">
-        <input type="submit" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
+        <input type="submit" [disabled]="form.invalid" name="submit" id="submit" class="form-submit" value="Add Rent Service"/>
     </div>
 
     <button mat-dialog-close> Close</button>
