--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -51,7 +51,7 @@
                   </div>
 
                   <div class="form-group">
-                      <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
+                      <input type="submit" [disabled]="form.invalid"  name="submit" id="submit" class="form-submit" value="Sign up"/>
                   </div>
               </form>
   </section>
