#AB26 - SingIn and Registration

--- a/clover/src/app/components/register-user/register-user.component.html
+++ b/clover/src/app/components/register-user/register-user.component.html
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                         <div class="profile-userbuttons">
-                            <button type="button" class="btn btn-success btn-sm">Points</button>
+                            <button type="button" (click)="Click()" class="btn btn-success btn-sm">Points</button>
                             <button type="button" class="btn btn-danger btn-sm">Message</button>
                         </div>
                         <div class="profile-usermenu">
