--- a/clover/src/styles.css
+++ b/clover/src/styles.css
@@ -55,3 +55,5 @@
     font-size: 80%;
     color: rgb(235, 35, 0);
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
