--- a/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
+++ b/clover/src/app/components/car/car-filter/RentCar/rent-car/rent-car.component.html
@@ -1,23 +1,39 @@
  <h1 mat-dialog-title> {{car.brand}} {{car.model}}</h1>
  <div class="image" style="content:url({{car.imgUrl}})"></div>
  
- <form ><!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
+ <form><!--</form>#form="ngForm" autocomplete="off" (ngSubmit)="onSubmit(form)" id="signup-form" class="signup-form"> -->
 
     <!-- <input type="hidden" name="carId" [value]="service.formData.carId"> -->
     <div class="row">
         <div class="col-md-3">
             <div class="form-group">
             <span class="form-label">Start Date</span>
-            <input style="width: 175px;" class="form-control" type="date" required>
+            <input style="width: 175px;" class="form-control" type="date" id="startDate" name="startDate" formControlName="startDate" required>
             </div>
         </div>
 
         <div class="col-md-3">
             <div class="form-group">
-            <span class="form-label">End Date</span>
+            <span style="margin-left: 40px;" class="form-label">End Date</span>
             <input style="width: 175px; margin-left: 40px;" class="form-control" type="date" required>
             </div>
         </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">
+            <div class="form-group">
+              <span class="form-label">Start Location</span>
+              <input style="width: 175px;" class="form-control" type="text" placeholder="Start Location" id="startLocationFilter">
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="form-group">
+              <span style="margin-left: 40px;" class="form-label">End Location</span>
+              <input style="width: 175px; margin-left: 40px;" class="form-control" type="text" placeholder="End Location" id="endLocationFilter">
+            </div>
+          </div>
     </div>
 
     <div class="form-group">
