--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -22,13 +22,15 @@
                     <button class="btn" (click)="showRegister()"><span>Register</span></button>
                   </div>
 
-                <form [formGroup]="loginGroup" autocomplete="off" (ngSubmit)="onSubmit()" id="signup-form" class="signup-form">
+                <form #form="ngForm" autocomplete="off" (ngSubmit)="onSubmit()" id="signup-form" class="signup-form">
                   <div class="form-group">
-                      <input type="mail" name="email" formControlName="email" id="Email" class="form-input" placeholder="Mail" required/>
+                      <input type="mail" #Email="" name="email" formControlName="email" id="Email" class="form-input" placeholder="Mail" required/>
+                      <div class="validation-error" *ngIf="Email.invalid && Email.touched">This field is required</div>
                     </div>
 
                     <div class="form-group">
-                        <input type="password" name="password" formControlName="password" id="Password" class="form-input" placeholder="Password" required/>
+                        <input type="password" #Password="" name="password" formControlName="password" id="Password" class="form-input" placeholder="Password" required/>
+                        <div class="validation-error" *ngIf="Password.invalid && Password.touched">This field is required</div>
                       </div>
   
                     <div class="form-group">
