--- a/clover/src/app/components/add-flight/add-flight.component.html
+++ b/clover/src/app/components/add-flight/add-flight.component.html
@@ -53,6 +53,19 @@
         <input #price="ngModel" [(ngModel)]="service.formData.price" name="price" type="number" class="form-input" id="price" required/>
       </div>
       
+      <div class="form-group">
+        SeatsNumber:
+        <input #price="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number" class="form-input" id="seatsNumber" required/>
+      </div>
+
+      <div class="form-group">
+        RateFlight
+        <input #price="ngModel" [(ngModel)]="service.formData.rateFlight" name="rateFlight" type="number" class="form-input" id="rateFlight" required/>
+      </div>
+      
+      
+    
+      
 
       <div class="form-group">
         <input type="submit" name="submit" id="submit" class="form-submit" value="Add FLIGHT"/>
