--- a/clover/src/app/components/company-profile/company-profile.component.html
+++ b/clover/src/app/components/company-profile/company-profile.component.html
@@ -171,6 +171,17 @@
                                 <input name="price" #price="ngModel" [(ngModel)]="service.formData.price"  id="price" class="form-control" type="number" placeholder="price" required>
                 </div>   
 
+
+                <div class="form-group">
+                        SeatsNumber:
+                        <input #price="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number" class="form-input" id="seatsNumber" required/>
+                      </div>
+                
+                      <div class="form-group">
+                        RateFlight
+                        <input #price="ngModel" [(ngModel)]="service.formData.rateFlight" name="rateFlight" type="number" class="form-input" id="rateFlight" required/>
+                      </div>
+
                 <div class="form-group">
                  <input  type="submit" name="submit" id="submit" class="form-submit" value="Add Flight"/>
                 </div>
