Revert "Pokusaj ispravke"
This reverts commit c8021c9b49036bf85df797e942224269ff9ed6be.

--- a/clover/src/app/components/add-flight/add-flight.component.html
+++ b/clover/src/app/components/add-flight/add-flight.component.html
@@ -55,12 +55,12 @@
       
       <div class="form-group">
         SeatsNumber:
-        <input #seatsNumber="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number" class="form-input" id="seatsNumber" required/>
+        <input #price="ngModel" [(ngModel)]="service.formData.seatsNumber" name="seatsNumber" type="number" class="form-input" id="seatsNumber" required/>
       </div>
 
       <div class="form-group">
         RateFlight
-        <input #rateFlight="ngModel" [(ngModel)]="service.formData.rateFlight" name="rateFlight" type="number" class="form-input" id="rateFlight" required/>
+        <input #price="ngModel" [(ngModel)]="service.formData.rateFlight" name="rateFlight" type="number" class="form-input" id="rateFlight" required/>
       </div>
       
       
